[package]
name = "Markdown->HTML-rs"
version = "0.1.0"
authors = ["Aidan K. Ewart <aidanprattewart@gmail.com>"]
edition = "2018"

description = "A simple Markdown->HTML parser."

documentation = "https://github.com/Baidicoot/markdown-rs"
homepage = "https://github.com/Baidicoot/markdown-rs"
repository = "https://github.com/Baidicoot/markdown-rs"

readme = "README.md"

keywords = ["markdown", "html"]

categories = ["parser-implementations", "web-programming"]

license = "MIT"

license-file = "LICENSE"

[dependencies]
regex = "1"
lazy_static = "1.2.0"

[badges]

appveyor = { repository = "https://github.com/Baidicoot/markdown-rs", branch = "master", service = "github" }
